[package]
name = "chkn-dl"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "chkn-dl"
path = "src/main.rs"

[dependencies]
eframe      = { version = "0.27", features = ["default"] }
egui        = "0.27"
reqwest     = { version = "0.12", features = ["blocking", "json"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
zip         = "2"
dirs        = "5"
rfd         = "0.14"
open        = "5"
image       = { version = "0.24", default-features = false, features = ["png","jpeg","gif","bmp","webp","tga"] }
lzma-rs     = "0.3"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"